adding base files for scss and the reminaing conponent files

--- a/src/assets/scss/00_base/__base.scss
+++ b/src/assets/scss/00_base/__base.scss
@@ -1,6 +1,5 @@
 /*------------------------------------*\
-  MOLECULES
+  BASE
 \*------------------------------------*/
-@import "button-row",
-        "header",
-        "footer";
+@import "root",
+        "typography";
