--- a/src/assets/scss/03_organism/__organisms.scss
+++ b/src/assets/scss/03_organism/__organisms.scss
@@ -1,3 +1,6 @@
 /*------------------------------------*\
   ORGANISMS
 \*------------------------------------*/
+
+@import "case-study-list", 
+        "contact-form"; 
