--- a/src/assets/scss/00_base/__base.scss
+++ b/src/assets/scss/00_base/__base.scss
@@ -2,4 +2,5 @@
   BASE
 \*------------------------------------*/
 @import "root",
-        "typography";
+        "typography",
+        "settings";
