--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -2,8 +2,9 @@
   COMPONENTS
 \*------------------------------------*/
 
-@import "01_atom/__atoms",
-        "02_molecule/__molecules", 
+@import "00_base/__base",
+        "01_atom/__atoms",
+        "02_molecule/__molecules",
         "03_organism/__organisms",
-        "04_template/__templates", 
+        "04_template/__templates",
         "05_page/__pages";
