adding page transitions

--- a/src/assets/scss/00_base/__base.scss
+++ b/src/assets/scss/00_base/__base.scss
@@ -1,6 +1,9 @@
 /*------------------------------------*\
   BASE
 \*------------------------------------*/
-@import "root",
+@import "colors",
+        "root",
         "typography",
-        "settings";
+        "settings",
+        "functions",
+        "mixins";
