--- a/src/assets/scss/01_atom/__atoms.scss
+++ b/src/assets/scss/01_atom/__atoms.scss
@@ -1,4 +1,5 @@
 /*------------------------------------*\
   ATOMS
 \*------------------------------------*/
-@import "buttons";
+@import "buttons",
+        "radio";
