--- a/src/assets/scss/02_molecule/__molecules.scss
+++ b/src/assets/scss/02_molecule/__molecules.scss
@@ -3,4 +3,5 @@
 \*------------------------------------*/
 @import "button-row",
         "header",
-        "footer";
+        "footer", 
+        "fieldset";
