--- a/src/assets/scss/03_organism/_contact-form.scss
+++ b/src/assets/scss/03_organism/_contact-form.scss
@@ -1,5 +1,17 @@
 .o-contact-form {
-    border: 10px solid red; 
-    background: yellow; 
-    color: blue; 
+    height: 100vh;
+    background: get-color("primary", "after-hours"); 
+
+    .typeform-widget {
+        height: 100vh; 
+        background: get-color("primary", "after-hours"); 
+    }
+
+    #root {
+        background: get-color("primary", "after-hours"); 
+    }
+
+    div {
+        border: 1px solid blue; 
+    }
 }
