--- a/src/assets/scss/03_organism/__organisms.scss
+++ b/src/assets/scss/03_organism/__organisms.scss
@@ -3,4 +3,5 @@
 \*------------------------------------*/
 
 @import "case-study-list", 
-        "contact-form"; 
+        "contact-form",
+        "page-transitions"; 
