Feature/header layout (#2)
* adding text styles

* adding header markup

* adding hero, header, and footer

* fixing per PR comments and adding mobile styles

--- a/src/assets/scss/00_base/_typography.scss
+++ b/src/assets/scss/00_base/_typography.scss
@@ -1,17 +1,28 @@
 body {
     font-family: $font-primary;
-    font-weight: 200;
+    font-weight: 300;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6 {
+    font-weight: 200;
+    margin: 0;
+}
 
 h1 {
-    @include font-size("largish"); 
-    @include line-height("medium-large"); 
+    @include font-size(44px); 
+    @include line-height(48px); 
     color: get-color("neutral", "gray"); 
 
     @include breakpoints("tablet") {
-        @include font-size("largest"); 
-        @include line-height("largest"); 
+        @include font-size(85px); 
+        @include line-height(100px); 
     }
 }
 
@@ -81,4 +92,12 @@ p {
         @include font-size("small"); 
         @include line-height("small"); 
     }
+}
+
+a {
+    @include font-size("medium-large"); 
+    font-family: $font-secondary;
+    letter-spacing: .05em;
+    font-weight: 500;
+    text-decoration: none;
 }
