styling case study list and minor adjustments to contact form

--- a/src/assets/scss/00_base/_colors.scss
+++ b/src/assets/scss/00_base/_colors.scss
@@ -24,5 +24,6 @@ $colors: (
         "gray": #13171C,
         "medium-gray": #3E4E53, 
         "light-gray": #6E848C,
+        "lighter-gray": #DFEBEE,
     ),
 );
