--- a/src/assets/scss/01_atom/_buttons.scss
+++ b/src/assets/scss/01_atom/_buttons.scss
@@ -5,6 +5,8 @@
     border-bottom: 1px solid get-color("primary", "fresh");
     text-transform: uppercase;
     font-weight: 400;
+    background: transparent;
+    border: none;
 
     &.-disabled {
         color: get-color("neutral", "light-gray");
