--- a/src/assets/scss/01_atom/_radio.scss
+++ b/src/assets/scss/01_atom/_radio.scss
@@ -34,12 +34,16 @@
     }
 
     & + label {
-        @include font-size(32px);
+        @include font-size(24px);
         position: relative;
         padding: 0 16px;
         background: get-color("primary", "after-hours");
         color: get-color("neutral", "light-gray");
         z-index: 1;
+
+        @include breakpoints("tablet") {
+            @include font-size(32px);
+        }
 
         &:hover {
 
