--- a/src/assets/scss/02_molecule/_case-study.scss
+++ b/src/assets/scss/02_molecule/_case-study.scss
@@ -5,6 +5,7 @@
     overflow: hidden;
     margin: 0;
     transition: all 0.6s ease;
+    background: white;
 
     @include breakpoints("tablet") {
         padding: 0;
@@ -44,8 +45,7 @@
 
     &.-hovered {
         z-index: 9;
-
-        margin-top: -100px;
+        margin-top: -90px;
 
         .m-case-study__block {
             height: 200px;
@@ -81,7 +81,7 @@
         @include span-col(12);
 
         @include breakpoints("tablet") {
-            @include span-col(6);
+            @include span-col(5);
         }
     }
 
@@ -91,7 +91,7 @@
         margin-bottom: -80px;
 
         @include breakpoints("tablet") {
-            @include span-col(6);
+            @include span-col(7);
             margin-bottom: 0;
         }
     }
@@ -100,7 +100,8 @@
         max-width: 200px;
         position: absolute;
         left: 0;
-        z-index: -1;
+        top: -70px;
+        z-index: 0;
         display: none;
 
         @include breakpoints("tablet") {
@@ -115,6 +116,7 @@
     &__image {
         right: 0;
         bottom: calc(-30% + -110px);
+        z-index: 1;
 
         @include breakpoints("tablet") {
             position: absolute !important;
