--- a/src/assets/scss/02_molecule/_footer.scss
+++ b/src/assets/scss/02_molecule/_footer.scss
@@ -11,11 +11,6 @@
         }
     }
 
-    &__left,
-    &__right {
-
-    }
-
     &__left {
 
         img {
@@ -40,7 +35,7 @@
         margin: 40px 0;
 
         @include breakpoints("tablet") {
-            margin: 0 20px 0 0;
+            margin: 0 40px 0 0;
 
             &:after {
                 content: ''; 
@@ -49,7 +44,7 @@
                 display: block; 
                 position: absolute;
                 top: 0;
-                right: -10px; 
+                right: -20px; 
                 background: get-color("primary", "fresh"); 
             }
         }
@@ -63,6 +58,18 @@
             width: 20px; 
             height: 20px; 
             margin-right: 20px;
+
+            svg {
+                fill: get-color("neutral", "light-gray");
+                transition: all 400ms ease;
+            }
+
+            &:hover {
+
+                svg {
+                    fill: get-color("neutral", "gray");
+                }
+            }
         }
     }
 }
