--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -76,7 +76,8 @@
         &.-greenblob {
             display: none;
             right: 180px;
-            top: 80vh;
+            top: 460px;
+            z-index: 1;
 
             @include breakpoints("tablet") {
                 display: block;
@@ -107,7 +108,8 @@
                 width: 24px; 
                 display: inline-block;
                 vertical-align: top;
-                margin-left: 20px;
+                margin-left: 6px;
+                margin-top: 14px;
             }
         }
     }
@@ -121,14 +123,16 @@
     }
 
     h6 {
+        @include font-size(14px);
         color: get-color("neutral", "light-gray"); 
         position: absolute;
         writing-mode: tb-rl;
         transform: rotate(-180deg);
         top: 50%; 
         left: 0;
-        height: 124px; 
         display: none;
+        word-spacing: 2em;
+        letter-spacing: .15em;
 
         @include breakpoints("tablet") {
             display: block;
@@ -138,8 +142,8 @@
     p {
         position: relative;
         float: right;
-        max-width: 160px;
         display: none;
+        max-width: 144px;
 
         @include breakpoints("tablet") {
             display: block;
@@ -156,7 +160,7 @@
                 vertical-align: top;
                 margin-right: 10px;
                 position: absolute;
-                left: -28px;
+                left: -18px;
             }
         }
     }
