--- a/src/assets/scss/01_atom/_textarea.scss
+++ b/src/assets/scss/01_atom/_textarea.scss
@@ -1,17 +1,21 @@
 .a-textarea {
-    @include font-size("small"); 
+    @include font-size("small");
     color: get-color("primary", "fresh");
     background: get-color("primary", "after-hours");;
     position: relative;
     font-family: $font-primary;
-    border: none; 
-    outline: none; 
+    border: none;
+    outline: none;
     padding: 10px 0;
-    border-bottom: 1px solid get-color("neutral", "light-gray"); 
+    border-bottom: 1px solid get-color("neutral", "light-gray");
     font-weight: 200;
     z-index: 1;
-    width: 100%; 
-    height: 200px; 
+    width: 100%;
+    height: 200px;
+
+    &.-light {
+        background: get-color("primary", "white");
+    }
 
     &:focus {
         border-color: get-color("primary", "fresh");
@@ -20,13 +24,13 @@
     &::-webkit-input-placeholder {
         color: get-color("primary", "fresh");
     }
-    &::-moz-placeholder { 
+    &::-moz-placeholder {
         color: get-color("primary", "fresh");
     }
-    &:-ms-input-placeholder { 
+    &:-ms-input-placeholder {
         color: get-color("primary", "fresh");
     }
-    &:-moz-placeholder { 
+    &:-moz-placeholder {
         color: get-color("primary", "fresh");
     }
 }
