--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -125,11 +125,11 @@
     h6 {
         @include font-size(14px);
         color: get-color("neutral", "light-gray"); 
-        position: absolute;
+        position: fixed;
         writing-mode: tb-rl;
         transform: rotate(-180deg);
         top: 50%; 
-        left: 0;
+        left: 3%;
         display: none;
         word-spacing: 2em;
         letter-spacing: .15em;
@@ -164,4 +164,26 @@
             }
         }
     }
+}
+
+:root {
+    --backgroundColor: #232323;
+    --firstColor: #00D69C;
+    --secondColor: #C52AFC;
+    --thirdColor: #FF1F00;
+    --fourthColor: #FFD600;
+    --dropShadowColor: rgba(0, 0, 0, .7);
+}
+
+svg {
+    transform-origin: 50% 50%;
+    animation: move 24s ease-in-out infinite;
+}
+
+@keyframes move {
+    0%   { transform: scale(1)   translate(0, 0) rotate(0); stroke: var(--firstColor); filter: drop-shadow( 20px 14px 10px var(--dropShadowColor)); }
+    25%  { transform: scale(0.8) translate(5vw, 10vh) rotate(55deg); stroke: var(--secondColor); filter: drop-shadow( 14px 14px 6px var(--dropShadowColor)); }
+    50%  { transform: scale(0.6) translate(15vw, 5vh) rotate(180deg); stroke: var(--thirdColor); filter: drop-shadow( -16px -16px 16px var(--dropShadowColor)); }
+    75%  { transform: scale(0.8) translate(5vw, 10h) rotate(55deg); stroke: var(--fourthColor); filter: drop-shadow( 14px 14px 6px var(--dropShadowColor)); }
+    100% { transform: scale(1)   translate(0, 0) rotate(0); stroke: var(--firstColor); filter: drop-shadow( 20px 14px 10px var(--dropShadowColor)); }
 }
