--- a/src/assets/scss/01_atom/_label.scss
+++ b/src/assets/scss/01_atom/_label.scss
@@ -17,4 +17,13 @@
     &.-field-active {
         top: -20px;
     }
+
+    &__error {
+        color: red;
+        position: absolute;
+        font-style: italic;
+        width: 100%;
+        left: 0;
+        bottom: -100%;
+    }
 }
