--- a/src/assets/scss/03_organism/_contact-form.scss
+++ b/src/assets/scss/03_organism/_contact-form.scss
@@ -103,6 +103,10 @@
     header {
         @include font-size("medium-large");
         color: get-color("primary", "white");
+
+        &.-light {
+            color: get-color("primary", "after-hours");
+        }
     }
 
     .o-rhythm__container {
