--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -21,7 +21,7 @@
 
     &__titles {
         margin-top: 60px;
-        max-width: 800px; 
+        max-width: 800px;
         width: 100%;
 
         @include breakpoints("tablet") {
@@ -30,7 +30,7 @@
     }
 
     &__subtitles {
-        max-width: 800px; 
+        max-width: 800px;
         width: 100%;
 
         @include breakpoints("tablet") {
@@ -40,7 +40,7 @@
 
     &__background {
         position: absolute;
-        
+
         &.-jigglydoo {
             right: -120px;
             top: 60px;
@@ -94,6 +94,15 @@
                 width: auto;
             }
         }
+
+        &.-circles-crosses {
+            bottom: 225px;
+            left: -100px;
+        }
+
+        &.-blue-paint {
+            right: 375px;
+        }
     }
 
     h1 {
@@ -104,7 +113,7 @@
                 content: '';
                 background: url('../../../static/img/asterisk.png') no-repeat center center / contain;
                 height: 24px;
-                width: 24px; 
+                width: 24px;
                 display: inline-block;
                 vertical-align: top;
                 margin-left: 20px;
@@ -114,20 +123,20 @@
 
     h3 {
         margin: 0 0 80px 0;
-        
+
         @include breakpoints("tablet") {
             margin: 0 0 280px 0;
         }
     }
 
     h6 {
-        color: get-color("neutral", "light-gray"); 
+        color: get-color("neutral", "light-gray");
         position: absolute;
         writing-mode: tb-rl;
         transform: rotate(-180deg);
-        top: 50%; 
+        top: 50%;
         left: 0;
-        height: 124px; 
+        height: 124px;
         display: none;
 
         @include breakpoints("tablet") {
