--- a/src/assets/scss/02_molecule/__molecules.scss
+++ b/src/assets/scss/02_molecule/__molecules.scss
@@ -2,6 +2,7 @@
   MOLECULES
 \*------------------------------------*/
 @import "button-row",
+        "contact-info", 
         "header",
         "footer", 
         "fieldset",
