--- a/src/assets/scss/02_molecule/_contact-info.scss
+++ b/src/assets/scss/02_molecule/_contact-info.scss
@@ -13,6 +13,8 @@
             @include line-height(36px);
             color: get-color("primary", "white"); 
             text-decoration: underline; 
+            display: block;
+            margin-bottom: 20px;
         }
     }
     
