--- a/src/assets/scss/01_atom/_buttons.scss
+++ b/src/assets/scss/01_atom/_buttons.scss
@@ -8,6 +8,33 @@
     font-weight: 400;
     background: transparent;
 
+    &.-large {
+        @include font-size(30px);
+        font-family: $font-primary; 
+        position: relative;
+        width: 100%; 
+        text-transform: none;
+        display: block;
+        border-bottom: 1px solid get-color("primary", "white");
+        padding: 34px 0;
+        font-weight: 300;
+
+        &:after {
+            content: '';
+            background: url('../../../static/img/contact/right_green_arrow.png') no-repeat center center / contain;
+            position: absolute;
+            right: 0;
+            top: 40px;
+            display: block;
+            width: 40px; 
+            height: 30px;
+        }
+
+        span {
+            padding-left: 80px;
+        }
+    }
+
     &.-light {
         color: get-color("primary", "after-hours");
     }
