--- a/src/assets/scss/02_molecule/_contact-info.scss
+++ b/src/assets/scss/02_molecule/_contact-info.scss
@@ -1,23 +1,27 @@
 .m-contact-info {
     background: get-color("primary", "after-hours");
-    padding: 200px 0;
+    padding: 100px 0;
+
+    @include breakpoints("tablet") {
+        padding: 200px 0;
+    }
 
     &__address {
 
         @include breakpoints("tablet") {
             @include span-col(4);
         }
-        
+
         a {
             @include font-size("medium");
             @include line-height(36px);
-            color: get-color("primary", "white"); 
-            text-decoration: underline; 
+            color: get-color("primary", "white");
+            text-decoration: underline;
             display: block;
             margin-bottom: 20px;
         }
     }
-    
+
     &__social {
         vertical-align: middle;
 
@@ -27,8 +31,8 @@
 
         a {
             display: inline-block;
-            width: 20px; 
-            height: 20px; 
+            width: 20px;
+            height: 20px;
             margin-right: 20px;
 
             svg {
@@ -47,9 +51,21 @@
 
     &__map {
         margin: 140px 0;
-        background: white; 
-        height: 540px; 
-        width: 100%; 
+        background: get-color("primary", "after-hours");
+        width: 100%;
+        position: relative;
+
+        @include breakpoints("tablet") {
+            left: 293px;
+        }
+
+        iframe {
+            width: 100%;
+
+            @include breakpoints("tablet") {
+                width: 87%;
+            }
+        }
     }
 
     &__directions {
@@ -59,11 +75,23 @@
         }
 
         p {
-            color: get-color("primary", "white"); 
+            color: get-color("primary", "white");
+        }
+    }
+
+    .o-rhythm__container {
+        &.-fluid {
+            padding: 0;
+            width: 100%;
+
+            @include breakpoints("tablet") {
+                padding: 0 3%;
+                width: 94%;
+            }
         }
     }
 
     h6 {
-        margin-bottom: 60px; 
+        margin-bottom: 60px;
     }
 }
