--- a/src/assets/scss/05_page/_contact-page.scss
+++ b/src/assets/scss/05_page/_contact-page.scss
@@ -1,25 +1,61 @@
 .p-contact-page {
-    .o-hero__top {
-        margin-bottom: 115px;
+    .o-hero {
+        @include breakpoints ("tablet") {
+            padding-bottom: 100px;
+        }
+
+        &__titles {
+            margin-top: 40px;
+            padding-left: 0;
+
+            @include breakpoints("tablet") {
+                margin-top: 0;
+            }
+
+            h2 {
+                color: get-color("primary", "fresh");
+                font-weight: 100;
+                font-size: 18px;
+
+                @include breakpoints("tablet") {
+                    @include font-size(36px);
+                    margin-bottom: 51px;
+                }
+            }
+        }
+
+        &__top {
+            margin-bottom: 64px;
+
+            @include breakpoints("tablet") {
+                margin-bottom: 112px;
+            }
+        }
     }
 
     .o-hero__subtitles {
-        font-family: $font-secondary;
-        letter-spacing: 0px;
-        padding-left: 0;
+        @include breakpoints("tablet") {
+            font-weight: 100;
+            letter-spacing: 0px;
+            padding-left: 0;
 
-        margin-left: 675px;
+            margin-left: 800px;
+        }
 
         h3 {
             line-height: 50px;
             margin-bottom: 0;
+
+            @include breakpoints("tablet") {
+                @include font-size(30px);
+            }
         }
     }
 
-    .-slider {
+    .-slider__container {
         position: relative;
 
-        &:after {
+        &:before {
             content: '';
             background: get-color("primary", "after-hours");
             height: 50%;
@@ -29,32 +65,112 @@
             display: block;
             z-index: -1;
         }
+    }
+
+    .-slider {
+        position: relative;
+
+        @include breakpoints("tablet") {
+            height: 930px;
+            left: 345px;
+            overflow: hidden;
+        }
+
+        .o-rhythm__container {
+            padding: 0;
+
+            @include breakpoints("tablet") {
+                padding: 0 20px;
+            }
+        }
 
         .slick-dots {
-            text-align: right;
-            right: 16px;
-            bottom: -45px;
+            li {
+                button {
 
-            li.slick-active button:before {
-                border: get-color("primary", "white");
-                color: transparent;
+                    &:before {
+                        color: get-color("primary", "white");
+                        opacity: 1;
+                    }
+                }
+
+                &.slick-active {
+                    button {
+                        &:before {
+                            color: get-color("primary", "white");
+                            content: "\2218";
+                            font-size: 22px;
+                            top: -3px;
+                        }
+                    }
+                }
+            }
+
+            @include breakpoints("tablet") {
+                text-align: right;
+                right: 342px;
+                bottom: -47px;
+                width: auto;
             }
         }
 
         .slick-list {
-            // padding:0 20% 0 0;
-        }
+            @include breakpoints("tablet") {
+                overflow: visible;
+                right: 345px;
 
-        .slick-next {
-            top: auto;
-            bottom: -65px;
-            left: 36px;
+                .slick-slide {
+                    div {
+                        margin: auto 10px;
+                    }
+                }
+            }
         }
 
         .slick-prev {
             top: auto;
-            bottom: -65px;
-            left: 0;
+            bottom: -67px;
+            left: -335px;
+            width: 28px;
+            height: 23px;
+
+            &::before {
+                content: '';
+            }
+
+            svg {
+                fill: get-color("neutral", "lighter-gray");
+                transition: all 400ms ease;
+            }
+
+            &:hover {
+                svg {
+                    fill: get-color("primary", "fresh");
+                }
+            }
+        }
+
+        .slick-next {
+            top: auto;
+            bottom: -67px;
+            left: -275px;
+            width: 28px;
+            height: 23px;
+
+            &::before {
+                content: '';
+            }
+
+            svg {
+                fill: get-color("neutral", "lighter-gray");
+                transition: all 400ms ease;
+            }
+
+            &:hover {
+                svg {
+                    fill: get-color("primary", "fresh");
+                }
+            }
         }
     }
 }
