adjusting slider positioning

--- a/src/assets/scss/03_organism/__organisms.scss
+++ b/src/assets/scss/03_organism/__organisms.scss
@@ -5,5 +5,6 @@
 @import "case-study-list",
         "contact-form",
         "hero",
-        "home-animation";
+        "home-animation",
+        "slider";
 
