fixing careers on mobile

--- a/src/assets/scss/01_atom/_buttons.scss
+++ b/src/assets/scss/01_atom/_buttons.scss
@@ -31,7 +31,11 @@
         }
 
         span {
-            padding-left: 80px;
+            padding-left: 0;
+
+            @include breakpoints("tablet") {
+                padding-left: 80px;
+            }
         }
     }
 
