Fixed styling for the slider on desktop and mobile.

--- a/src/assets/scss/03_organism/_contact-form.scss
+++ b/src/assets/scss/03_organism/_contact-form.scss
@@ -35,7 +35,11 @@
 
         h6 {
             color: get-color("primary", "fresh");
-            margin: 118px 0 80px 0;
+            margin: 79px 0 22px;
+
+            @include breakpoints("tablet") {
+                margin: 118px 0 80px;
+            }
         }
 
 
